versioned_docs/version-2.5/user-guide/settings.md
---
title: 站点设置
description: 站点设置相关功能说明
---

## 基本设置

Halo 提供了以下站点基本信息设置：

- **站点标题**
- **站点副标题**
- **站点 Logo 图片**
- **站点 Favion 图片**

在控制台设置完成后，主题端可以通过特定的表达式获取到这些信息并且在对应的位置进行展示。具体是否读取使用这些配置、在哪些位置显示这些信息由使用的不同主题而决定。

以 Halo 2.0 的[默认主题 Earth](https://github.com/halo-dev/theme-earth) 为例，这些设置信息将在如下位置进行展示。

![默认主题基本设置说明](/img/user-guide/settings/setting-basic.png)

## 文章设置

针对主题端的文章展示，Halo 提供了以下设置项：

- **文章列表显示条数**
- **归档页文章显示条数**
- **分类页文章显示条数**
- **标签页文章显示条数**

## SEO设置

针对站点的 SEO（搜索引擎优化）需求，Halo 提供了以下设置项：

- **屏蔽搜索引擎**：配置后会在所有页面 HTML 源码的 head 部分添加 `<meta name="robots" content="noindex" />`；
- **站点关键词**：格式为以`,`分隔的关键词列表，配置后会在所有页面 HTML 源码的 head 部分添加 `<meta name="keywords"> content="{用户的配置关键词}" />`；
- **站点描述**：配置后会在所有页面 HTML 源码的 head 部分添加 `<meta name=""> content="{用户的配置描述}" />`。

## 评论设置

针对站点的评论功能，Halo 提供了以下设置项：

- **启用评论**：全局评论功能开关配置，修改后影响所有文章、页面的评论功能；
- **新评论审核**：新增的评论是否需要在控制台进行审核，审核通过后其他访问者才能看到该条评论；
- **仅允许注册用户评论**：开启后只有登录用户才能添加评论，关闭后匿名（未登录）访问者也可以添加评论。

## 主题路由设置

针对访问站点各种类型页面的 URL 生成规则，Halo 提供了以下主题路由设置项：

- **分类页路由前缀**：定位到指定文章分类页面的 URL 规则前缀，默认为 `/categories/{文章分类别名}`，修改后为 `/{用户定义的分类页路由前缀/{文章分类别名}`；
- **标签页路由前缀**：定位到指定文章标签页面的 URL 规则前缀，默认为 `/tags/{文章标签别名}`，修改后为 `/{用户定义的标签页路由前缀/{文章标签别名}`；
- **归档页路由前缀**：定位到文章归档页面的 URL 规则前缀，默认为 `/archives/{年}/{月}` 等路径，修改后为 `/{用户定义的归档页路由前缀/{年}/{月}` 等；
- **文章详情页访问规则**：定位到具体文章详情页面的 URL 规则前缀，默认为 `/archives/{文章别名}` ，用户可从以下路径规则进行选择：
  - `/archives/{slug}`
  - `/archives/{name}`
  - `/?p={name}`
  - `/?p={slug}`
  - `/?p={slug}`
  - `/{year}/{slug}`
  - `/{year}/{month}/{slug}`
  - `/{year}/{month}/{day}/{slug}`
:::info 变量说明
    - `slug`：文章别名；
    - `name`：文章 `metadata.name` 字段值；
    - `year`：四位数格式的文章发布年份；
    - `month`：两位数格式的文章发布月份：
    - `day`：两位数格式的文章发布日。
:::

## 代码注入

你可以使用代码注入功能，在特定类型的页面中注入额外的代码。你可以通过该功能覆盖或补充部分主题 CSS 样式，或者引入额外的 JavaScript 脚本扩展主题端功能。
